--- a/ece143_project.ipynb
+++ b/ece143_project.ipynb
@@ -33,7 +33,7 @@
     "solar_df = solar_df.drop([\"active.region.ar\", \"flag.1\", \"flag.2\", \"flag.3\", \"flag.4\", \"flag.5\"], axis=1)\n",
     "\n",
     "''' Some Radial Values are beyond 2000'''\n",
-    "solar_df = solar_df[solar_df[\"x.pos.asec\"] > -2000]"
+    "solar_df = solar_df[solar_df[\"radial\"] <960]"
    ]
   },
   {
